--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,42 +2,42 @@
 @use 'util';
 @use 'config';
 
-body{
+body {
     display: grid;
     grid-template-columns: 1fr minmax(355px, min(50%, 1000px)) 1fr;
     grid-template-rows: auto 20% auto;
     min-height: auto;
-    background-color: lighten(config.$neutral-color,49);
+    background-color: lighten(config.$neutral-color, 49);
 }
 
-header{
+header {
     grid-row: 1/3;
     grid-column: 1/-1;
 }
 
-main{
+main {
     grid-column-start: 2;
     grid-row-start: 2;
 }
 
-.card{
+.card {
     background-color: lighten(config.$neutral-color, 100);
     border-radius: 0.8em 0.8em 0.8em 0.8em;
 }
 
-.logo{
+.logo {
     height: 3rem;
     width: 3rem;
     position: relative;
     top: -1.5rem;
 }
 
-.title{
+.title {
     text-align: center;
     width: 75%;
 }
 
-.subtitle{
+.subtitle {
     margin-top: 1em;
     text-align: center;
     width: 90%;
@@ -50,4 +50,48 @@ main{
     width: 93%;
     margin-top: 1.3em;
     margin-bottom: 3em;
+}
+
+//util classes
+
+%font-100 {
+    font-family: config.$font-name;
+    font-weight: 400;
+}
+
+%font-200 {
+    font-family: config.$font-name;
+    font-weight: 500;
+}
+
+%font-300 {
+    font-family: config.$font-name;
+    font-weight: 700;
+}
+
+.text1 {
+    font-size: util.clamped(1.25rem, 1.86rem);
+    @extend %font-300
+}
+
+.text2 {
+    font-size: util.clamped(0.9rem, 1rem);
+    @extend %font-100;
+    color: config.$neutral-color;
+}
+
+.btn1 {
+    padding: 0 2.8em 0 2.8em;
+    height: 4em;
+    border-radius: 2em;
+    font-size: 0.9em;
+    border-style: none;
+    cursor: pointer;
+    background-color: config.$primary-color;
+    color: lighten(config.$neutral-color, 100);
+    @extend %font-200
+}
+
+.btn1:hover {
+    background-color: darken($color: config.$primary-color, $amount: 15)
 }
