--- a/src/scss/_util.scss
+++ b/src/scss/_util.scss
@@ -44,6 +44,10 @@
     align-items: center;
 }
 
+.align-items-baseline {
+    align-items: baseline;
+}
+
 .space-between {
     justify-content: space-between;
 }
