--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -112,6 +112,14 @@ main {
     min-width: 150px;
 }
 
+.pledge-card-inline-container button {
+    margin-top: 1.5em;
+}
+
+.pledge-card-inline-container .pledge-label {
+    margin-top: 0.5em;
+}
+
 @media screen and (min-width: 62em) {
     .bookmark {
         border-radius: 2em;
