--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -98,6 +98,10 @@ main {
     @extend .thin-border
 }
 
+.pledge-card.disabled {
+    opacity: 0.2;
+}
+
 .pledge-card>*:not(:first-child) {
     margin-top: 1.5em;
 }
@@ -225,4 +229,9 @@ main {
     border-style: solid;
     border-width: 1px;
     border-color: lighten(config.$neutral-color, 40);
+}
+
+button.disabled {
+    background-color: darken(config.$neutral-color, 100);
+    pointer-events: none;
 }
