--- a/src/scss/_util.scss
+++ b/src/scss/_util.scss
@@ -52,6 +52,14 @@
     justify-content: space-between;
 }
 
+.justify-center {
+    justify-content: center;
+}
+
+.justify-end {
+    justify-content: flex-end;
+}
+
 .vertical-align-middle {
     vertical-align: middle;
 }
