--- a/src/scss/_util.scss
+++ b/src/scss/_util.scss
@@ -60,6 +60,10 @@
     justify-content: flex-end;
 }
 
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
 .vertical-align-middle {
     vertical-align: middle;
 }
