--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -145,6 +145,43 @@ main {
     margin-top: min(25%, 14em);
 }
 
+.modal>*:nth-child(n+3):nth-child(-n+4) {
+    margin-top: 1.2em;
+}
+
+.custom-radio input[type='radio'] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    padding: 6px;
+    background-clip: content-box;
+    border: 1px solid lighten($color: config.$neutral-color, $amount: 40);
+    border-radius: 50%;
+    margin-right: 1em;
+}
+
+.custom-radio input[type='radio']:checked {
+    background-color: config.$primary-color;
+}
+
+.custom-radio:hover input[type='radio'] {
+    border-color: config.$primary-color;
+}
+
+.custom-radio:hover label {
+    color: config.$primary-color;
+}
+
+.item-stat {
+    min-width: unset;
+}
+
+.item-stat>span {
+    margin-left: 0.5em;
+}
+
 @media screen and (min-width: 62em) {
     .bookmark {
         border-radius: 2em;
@@ -169,11 +206,27 @@ main {
         margin-left: 0.8em;
         margin-right: 1.5em;
     }
+
+    .item-stat-bottom {
+        display: none;
+    }
+
+    // .item-stat {
+    //     display: block;
+    // }
 }
 
 @media screen and (max-width: 62em) {
     .bookmark {
         background-color: lighten($color: config.$neutral-color, $amount: 100);
+    }
+
+    .item-stat {
+        display: none;
+    }
+
+    .item-stat-bottom {
+        display: block;
     }
 }
 
@@ -260,4 +313,8 @@ button.disabled {
 .small {
     height: 1em;
     width: 1em;
+}
+
+.margin-left-small {
+    margin-left: 0.5em;
 }
