--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -133,6 +133,8 @@ main {
     min-height: 100vh;
     background-color: rgba(0, 0, 0, 0.4);
     z-index: 10;
+    overflow: auto;
+    max-height: 100%;
 }
 
 .modal {
