--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -7,3 +7,11 @@ html,
 body {
     min-height: 100vh;
 }
+
+input,
+textarea,
+button,
+select,
+a {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
