--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -15,3 +15,12 @@ select,
 a {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
+}
