binds progress bar to data

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -84,7 +84,7 @@ main {
 }
 
 .progress-bar{
-    background: linear-gradient(to right, config.$primary-color 50%, lighten(config.$neutral-color, 40) 50%);
+    // background: linear-gradient(to right, config.$primary-color 50%, lighten(config.$neutral-color, 40) 50%);
     height: 10px;
     border-radius: 5px;
     margin-bottom: min(10%, 3.5em);
